// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MKBadge renders large info badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-1af6cc8-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders large info contained badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-14yfsos-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders medium white badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-11o5x74-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders medium white contained badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-xccdpf-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`MKBadge renders small light badges 1`] = `
<div>
  <span
    class="MuiBadge-root css-1ww9fgc-MuiBadge-root"
  >
    <span
      class="MuiBadge-badge MuiBadge-standard MuiBadge-invisible MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular css-14zn51v-MuiBadge-badge"
    />
  </span>
</div>
`;
